# compose-example

./: .env.example  .gitignore  Makefile  README.md
components/: README.md
components/calculator/: Cargo.toml  wasmcloud.toml
components/calculator/src/: lib.rs
components/calculator/wit/: deps.toml  world.wit
components/distance-calculator/: Cargo.toml
components/distance-calculator/wit/: deps.toml  world.wit
components/math/: Cargo.toml
components/math/wit/: world.wit
components/pythagorean-middleware/: Cargo.toml  README.md
components/pythagorean-middleware/wit/: deps.toml  world.wit
components/statistics/: Cargo.toml
components/statistics/wit/: deps.toml  world.wit
components/stddev-middleware/: Cargo.toml
components/stddev-middleware/wit/: world.wit
components/string-utils/: Cargo.toml  README.md  wasmcloud.toml
components/string-utils/src/: lib.rs
components/string-utils/wit/: deps.toml  world.wit
components/system-info/: Cargo.toml  README.md  wasmcloud.toml
components/system-info/src/: lib.rs
components/system-info/wit/: deps.toml  world.wit
components/variance-middleware/: Cargo.toml
components/variance-middleware/wit/: world.wit
config/: .env.example
manifests/templates/: deployment.yaml.tpl  httptrigger.yaml.tpl
scripts/: build-and-push.sh  cleanup.sh  deploy.sh  install-cosmonic.sh  setup-kind.sh  test-mcp.sh
tools/cosmonic-manager/: Cargo.toml
tools/cosmonic-manager/src/: main.rs
tools/wash-manager/: Cargo.toml
tools/wash-manager/src/: main.rs
