[package]
name = "pythagorean-middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.40.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:pythagorean-middleware"

[package.metadata.component.target]
path = "wit"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
