[package]
name = "system_info"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Empty workspace table prevents this package from inheriting
# a parent workspace when created inside another workspace
[workspace]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
